@@ -3162,6 +3162,14 @@
          "kareng"
       ]
    },
+   "Katherine Cheney" : {
+      "emails" : [
+         "katherine_cheney@apple.com"
+      ],
+      "nicks" : [
+         "kate"
+      ]
+   },
    "Katie Madonna" : {
       "emails" : [
          "madonnk@gmail.com"
