@@ -1,3 +1,9 @@
+2019-10-28  Kate Cheney  <katherine_cheney@apple.com>
+
+        Added myself as a committer.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2019-10-28  Alex Christensen  <achristensen@webkit.org>
 
         Remove unused _WKProcessPoolConfiguration SPI
